--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
         <link rel="stylesheet" href="style.css"/>
 
-        <title>Document</title>
+        <title>To-Do List</title>
     </head>
 
     <body>
@@ -28,7 +28,7 @@
 
             <h3>Create New Task</h3>
             <input id="new-task-input" type="text" name="string" placeholder="New task..." />
-            <button id="new-task-btn" onclick="createTask(captureInput())">Create Task</button>
+            <button id="new-task-btn" onclick="createTask(captureInput('new-task-input'))">Create Task</button>
 
             <!--
                 <form action="/tasks" method="post">
@@ -40,6 +40,10 @@
             
 
             <h3>Edit Task</h3>
+            <input id="original-task" type="text" placeholder="Original task..." />
+            <input id="new-task" type="text" placeholder="New task..." />
+
+            <button id="edit-task" onclick="editTask(captureInput('original-task'), captureInput('new-task'))">Edit Task</button>
 
             <h3>Delete Task</h3>
         </main>
