Delete request complete

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,8 @@
             <button id="edit-task" onclick="editTask(captureInput('original-task'), captureInput('new-task'))">Edit Task</button>
 
             <h3>Delete Task</h3>
+            <input id="target-task" type="text" placeholder="Delete task..." />
+            <button id="delete-button" onclick="deleteTask(captureInput('target-task'))">Delete Task</button>
         </main>
 
         <footer>
