Delete first index bug fix

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         <title>To-Do List</title>
     </head>
 
-    <body>
+    <body onload="fetchTasks()">
         <header class="header">
             <h1>To-Do List</h1>
         </header>
@@ -22,7 +22,7 @@
 
             <div class="card">
             
-                <h3>Fetch First Task</h3>
+                <h3>Get Tasks</h3>
                 <button id="fetchBtn" onclick="fetchTasks()" >Fetch Tasks</button>
 
                 <h3>Create New Task</h3>
