--- a/public/index.html
+++ b/public/index.html
@@ -23,21 +23,21 @@
             <div class="card">
             
                 <h3>Get Tasks</h3>
-                <button id="fetchBtn" onclick="fetchTasks()" >Fetch Tasks</button>
+                <button id="fetchBtn" onclick="fetchTasks()" class="btn">Fetch Tasks</button>
 
                 <h3>Create New Task</h3>
                 <input id="new-task-input" type="text" name="string" placeholder="New task..." />
-                <button id="new-task-btn" onclick="createTask(captureInput('new-task-input'))">Create Task</button>
+                <button id="new-task-btn" onclick="createTask(captureInput('new-task-input'))" class="btn">Create Task</button>
 
                 <h3>Edit Task</h3>
                 <input id="original-task" type="text" placeholder="Original task..." />
                 <input id="new-task" type="text" placeholder="New task..." />
 
-                <button id="edit-task" onclick="editTask(captureInput('original-task'), captureInput('new-task'))">Edit Task</button>
+                <button id="edit-task" onclick="editTask(captureInput('original-task'), captureInput('new-task'))" class="btn">Edit Task</button>
 
                 <h3>Delete Task</h3>
                 <input id="target-task" type="text" placeholder="Delete task..." />
-                <button id="delete-button" onclick="deleteTask(captureInput('target-task'))">Delete Task</button>
+                <button id="delete-button" onclick="deleteTask(captureInput('target-task'))" class="btn">Delete Task</button>
 
             </div>
 
