--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
 
                 <h3>Display Tasks</h3>
                 <div id="display-tasks"></div>
-                <button id="add-task" class="btn">+</button>
+                <button id="add-task" class="btn" onclick="addTask()">+</button>
             </div>
             
         </main>
