--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
                 </div>
                 
 
-                <p>Don't have an account yet? Create an account below.</p>
+                <p>Don't have an account yet? <br> Create an account below.</p>
 
                 <hr>
 
