--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <title>To-Do List</title>
     </head>
 
-    <body>
+    <body onload="verifyLogin()">
         <header class="header">
             <h1>To-Do List</h1>
         </header>
